# Deteccao_objeto

./: .gitignire  DOCUMENTACAO_TECNICA.md  README.md  detecta.py  makefile  pyproject.toml  requirements.txt
